# bank_app

./: Dockerfile  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/: routes.py
src/bank_core/: apps.py  models.py  permissions.py  reports.py  serializers.py  urls.py  views.py
src/bank_core/migrations/: 0001_initial.py  0002_auto_20211217_1029.py  0003_alter_currency_code.py
src/base/: permissions.py
src/feed/: services.py  views.py
src/feed/management/commands/: addfake.py
src/followers/: models.py  serializers.py  urls.py  views.py
src/followers/migrations/: 0001_initial.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20211130_1254.py  0003_auto_20211201_1255.py  0004_alter_usernet_technology.py  0005_usernet_bank.py
src/wall/: models.py  urls.py  views.py
src/wall/migrations/: 0001_initial.py
